ml-website-flask.yaml
# ml-website-flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-website-flask
  labels:
    app: ml-website-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-website-flask
  template:
    metadata:
      labels:
        app: ml-website-flask
    spec:
      containers:
      - name: ml-website-flask
        image: firasbt/ml-website-flask
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"  # 0.1 CPU cores
            memory: "128Mi"  # 128 MiB
          limits:
            cpu: "200m"  # 0.2 CPU cores
            memory: "256Mi"  # 256 MiB
---
apiVersion: v1
kind: Service
metadata:
  name: ml-website-flask-service
spec:
  selector:
    app: ml-website-flask
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
