vscode-python.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vscode-python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vscode-python
  template:
    metadata:
      labels:
        app: vscode-python
    spec:
      containers:
      - name: vscode-python
        image: firasbt/vscode-python:3.0.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"  # 0.1 CPU cores
            memory: "128Mi"  # 128 MiB
          limits:
            cpu: "200m"  # 0.2 CPU cores
            memory: "256Mi"  # 256 MiB
---
apiVersion: v1
kind: Service
metadata:
  name: vscode-python-service
spec:
  selector:
    app: vscode-python
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
