ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaskapp-with-vscode
  annotations:
    # Disables http redirect to https
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
        paths:
          - path: /code-server
            pathType: Prefix
            backend:
              service:
                name: vscode-python-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ml-website-flask-service
                port:
                  number: 3000
